add crm handlers
