# docs/swagger.json
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "admin"
                 ],
                 "summary": "SingIn admin",
                 "parameters": [
@@ -50,7 +50,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "admin"
                 ],
                 "summary": "SingUp admin",
                 "parameters": [
@@ -176,6 +176,39 @@
                 }
             }
         },
+        "/customer/get-by-alias/{alias}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "customer"
+                ],
+                "summary": "Get all customers by alias",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "website alias",
+                        "name": "alias",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/customer.GetResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/customer/sign-in": {
             "post": {
                 "consumes": [
@@ -185,7 +218,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "customer"
                 ],
                 "summary": "SingIn customer",
                 "parameters": [
@@ -218,7 +251,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "customer"
                 ],
                 "summary": "SingUp customer",
                 "parameters": [
@@ -328,6 +361,39 @@
                     "order"
                 ],
                 "summary": "Get all orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/order.GetResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/order/get-by-alias/{alias}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "Get all orders by alias",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "website alias",
+                        "name": "alias",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -669,6 +735,23 @@
                 }
             }
         },
+        "customer.GetResponse": {
+            "type": "object",
+            "properties": {
+                "customers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/storage.Customer"
+                    }
+                },
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "customer.SignInRequest": {
             "type": "object",
             "properties": {
@@ -815,11 +898,31 @@
                 }
             }
         },
+        "storage.Customer": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "website_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "storage.Order": {
             "type": "object",
             "properties": {
+                "customer_id": {
+                    "type": "integer"
+                },
                 "date_time": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "order_items": {
                     "type": "array",
